--- a/sim/sim.html
+++ b/sim/sim.html
@@ -31,7 +31,7 @@
 	<body>
 
 		<div id="info">
-			Lagrangian Model for the Simulation of Explosions <br/>
+			<h4>Lagrangian Model for the Simulation of Explosions</h5> <br/>
 			Press mouse button to orbit around. 'W' key toggles wireframe.
 		</div>
 
